--- a/snippets/get-on-appstore-or-googleplay.html
+++ b/snippets/get-on-appstore-or-googleplay.html
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-light">
 
     <div class="container">
         <div class="row vh-100 justify-content-center align-items-center">
